--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.0",
     "react-icons": "^4.10.1",
+    "react-loading": "^2.0.3",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
     "use-debounce": "^9.0.4",
